[gd_scene load_steps=12 format=3 uid="uid://b36ts5maohabp"]

[ext_resource type="Script" path="res://scripts/menus/ActionMenu.gd" id="1_dieak"]
[ext_resource type="Theme" uid="uid://7f715063sed8" path="res://assets/sprites/gui/panel.tres" id="1_twjxi"]
[ext_resource type="Script" path="res://scripts/menus/MenuItem.gd" id="3_7o6io"]
[ext_resource type="PackedScene" uid="uid://c5e0w4cg1ke0m" path="res://scenes/combat/menu_cursor.tscn" id="3_y3s34"]
[ext_resource type="Texture2D" uid="uid://d0owvcxd21pyy" path="res://assets/sprites/units/cat/cat-portrait.png" id="4_vhx02"]
[ext_resource type="Texture2D" uid="uid://cdnodtbv7hjs5" path="res://assets/sprites/gui/cursor.png" id="5_7nnkj"]
[ext_resource type="Script" path="res://scripts/UnitCursor.gd" id="6_sm4mi"]
[ext_resource type="FontFile" uid="uid://d004rlbpn65jj" path="res://assets/rainyhearts.ttf" id="8_kn3sp"]
[ext_resource type="Texture2D" uid="uid://symy6e2b3eds" path="res://assets/sprites/units/cat/frog-portrait.png" id="8_l1dmk"]

[sub_resource type="LabelSettings" id="LabelSettings_hxbrx"]

[sub_resource type="LabelSettings" id="LabelSettings_67yg8"]
font = ExtResource("8_kn3sp")
font_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="ActionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -6.0
offset_right = -42.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dieak")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 285.0
offset_right = 698.0
offset_bottom = 376.0
theme = ExtResource("1_twjxi")

[node name="SpellMenu" type="GridContainer" parent="Panel"]
layout_mode = 0
offset_left = 200.0
offset_top = 13.0
offset_right = 440.0
offset_bottom = 73.0
theme_override_constants/h_separation = 100
columns = 2

[node name="MainMenu" type="GridContainer" parent="Panel"]
layout_mode = 0
offset_left = 208.0
offset_top = 17.0
offset_right = 431.0
offset_bottom = 67.0
theme_override_constants/h_separation = 100
columns = 2

[node name="Attack" type="Label" parent="Panel/MainMenu"]
layout_mode = 2
text = "ATTACK"
script = ExtResource("3_7o6io")

[node name="Spell" type="Label" parent="Panel/MainMenu"]
layout_mode = 2
text = "SPELL"
script = ExtResource("3_7o6io")

[node name="Defend" type="Label" parent="Panel/MainMenu"]
layout_mode = 2
text = "DEFEND"
script = ExtResource("3_7o6io")

[node name="Skip" type="Label" parent="Panel/MainMenu"]
layout_mode = 2
text = "SKIP
"
script = ExtResource("3_7o6io")

[node name="SpellPanel" type="Panel" parent="."]
visible = false
clip_contents = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 0
offset_left = 421.0
offset_top = 96.0
offset_right = 685.0
offset_bottom = 267.0
theme = ExtResource("1_twjxi")

[node name="Label" type="Label" parent="SpellPanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 252.0
offset_bottom = 153.0
label_settings = SubResource("LabelSettings_hxbrx")
autowrap_mode = 3
clip_text = true

[node name="MenuCursor" parent="." instance=ExtResource("3_y3s34")]
layout_mode = 0
offset_left = 56.0
offset_top = 15.0
offset_right = 73.0
offset_bottom = 27.0
texture = ExtResource("5_7nnkj")
expand_mode = 1
menu_parent_path = NodePath("../Panel/MainMenu")
cursor_offset = Vector2(10, 0)

[node name="UnitCursor" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 69.0
offset_right = 465.0
offset_bottom = 90.0
rotation = 1.5708
texture = ExtResource("5_7nnkj")
script = ExtResource("6_sm4mi")

[node name="unit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="menu_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PlayerPortraits" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = 14.0
offset_right = 366.0
offset_bottom = 38.0
scale = Vector2(2, 2)

[node name="Portrait1" type="TextureRect" parent="PlayerPortraits"]
layout_mode = 2
texture = ExtResource("4_vhx02")

[node name="BoxContainer" type="BoxContainer" parent="PlayerPortraits/Portrait1"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 91.0
offset_bottom = 25.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Label" type="Label" parent="PlayerPortraits/Portrait1/BoxContainer"]
layout_mode = 2
text = "HP: 10/100"
label_settings = SubResource("LabelSettings_67yg8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait2" type="TextureRect" parent="PlayerPortraits"]
layout_mode = 2
texture = ExtResource("8_l1dmk")

[node name="BoxContainer" type="BoxContainer" parent="PlayerPortraits/Portrait2"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 91.0
offset_bottom = 25.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Label" type="Label" parent="PlayerPortraits/Portrait2/BoxContainer"]
layout_mode = 2
text = "HP: 10/100"
label_settings = SubResource("LabelSettings_67yg8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait3" type="TextureRect" parent="PlayerPortraits"]
visible = false
layout_mode = 2
texture = ExtResource("4_vhx02")

[node name="BoxContainer" type="BoxContainer" parent="PlayerPortraits/Portrait3"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 91.0
offset_bottom = 25.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Label" type="Label" parent="PlayerPortraits/Portrait3/BoxContainer"]
layout_mode = 2
text = "HP: 10/100"
label_settings = SubResource("LabelSettings_67yg8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Portrait4" type="TextureRect" parent="PlayerPortraits"]
visible = false
layout_mode = 2
texture = ExtResource("4_vhx02")

[node name="BoxContainer" type="BoxContainer" parent="PlayerPortraits/Portrait4"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 91.0
offset_bottom = 25.0
scale = Vector2(0.5, 0.5)
alignment = 1

[node name="Label" type="Label" parent="PlayerPortraits/Portrait4/BoxContainer"]
layout_mode = 2
text = "HP: 10/100"
label_settings = SubResource("LabelSettings_67yg8")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="cursor_selected" from="Panel/MainMenu/Attack" to="." method="_on_attack_cursor_selected"]
[connection signal="cursor_selected" from="Panel/MainMenu/Spell" to="." method="_on_spell_cursor_selected"]
[connection signal="cursor_selected" from="Panel/MainMenu/Defend" to="." method="_on_defend_cursor_selected"]
[connection signal="cursor_selected" from="Panel/MainMenu/Skip" to="." method="_on_skip_cursor_selected"]
[connection signal="canceled" from="MenuCursor" to="." method="_on_menu_cursor_canceled"]
[connection signal="cursor_moved" from="MenuCursor" to="." method="_on_menu_cursor_cursor_moved"]
[connection signal="item_selected" from="MenuCursor" to="." method="_on_menu_cursor_item_selected"]
[connection signal="canceled" from="UnitCursor" to="." method="_on_unit_cursor_canceled"]
[connection signal="selected" from="UnitCursor" to="." method="_on_unit_cursor_selected"]
[connection signal="timeout" from="unit_timer" to="UnitCursor" method="_on_unit_timer_timeout"]
[connection signal="timeout" from="menu_timer" to="MenuCursor" method="_on_menu_timer_timeout"]
